@@ -5,26 +5,28 @@ import com.querydsl.core.types.dsl.Expressions;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.ewm.client.StatsClient;
 import ru.practicum.ewm.client.ViewStatsRequest;
 import ru.practicum.ewm.dto.*;
 import ru.practicum.ewm.entity.*;
 import ru.practicum.ewm.exception.ConflictException;
 import ru.practicum.ewm.exception.NotFoundException;
+import ru.practicum.ewm.mapper.CommentMapper;
 import ru.practicum.ewm.mapper.EventMapper;
 import ru.practicum.ewm.mapper.ParticipationRequestMapper;
-import ru.practicum.ewm.repository.CategoryRepository;
-import ru.practicum.ewm.repository.EventRepository;
-import ru.practicum.ewm.repository.ParticipationRequestRepository;
-import ru.practicum.ewm.repository.UserRepository;
+import ru.practicum.ewm.repository.*;
 
 import javax.validation.ValidationException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -33,9 +35,11 @@ public class EventServiceImpl implements EventService {
     private final CategoryRepository categoryRepository;
     private final ParticipationRequestRepository participationRequestRepository;
     private final UserRepository userRepository;
+    private final CommentRepository commentRepository;
     private final StatsClient statsClient;
 
     @Override
+    @Transactional(readOnly = true)
     public List<EventFullDto> searchEvents(String text, List<Integer> categories, Boolean paid, LocalDateTime rangeStart,
                                            LocalDateTime rangeEnd, Boolean onlyAvailable, PageRequest page) {
         QEvent event = QEvent.event;
@@ -56,9 +60,16 @@ public class EventServiceImpl implements EventService {
         BooleanExpression conditions = Expressions.allOf(queryConditions.toArray(new BooleanExpression[queryConditions.size()]));
 
         List<Event> events = eventRepository.findAll(conditions, page).getContent();
-        Map<Integer, Long> views = findViewsForEvents(events);
-        Map<Integer, Long> participationStats = findConfirmedRequestCount(events);
-        List<EventFullDto> foundEvents = EventMapper.toFullDtoList(events, views, participationStats)
+        List<Integer> eventIds = events.stream()
+                .map(Event::getId)
+                .collect(toList());
+        Map<Integer, Long> views = findViewsForEvents(eventIds);
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(eventIds);
+        List<Comment> comments = commentRepository.findByEvent_IdIn(eventIds);
+        Map<Integer, List<Comment>> commentsMap = comments
+                .stream()
+                .collect(groupingBy(c -> c.getEvent().getId(), toList()));
+        List<EventFullDto> foundEvents = EventMapper.toFullDtoList(events, views, participationStats, commentsMap)
                 .stream().filter(e -> {
                     if (onlyAvailable) {
                         return e.getParticipantLimit() == 0 || e.getConfirmedRequests() < e.getParticipantLimit();
@@ -77,18 +88,22 @@ public class EventServiceImpl implements EventService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public EventFullDto getEvent(int id) {
         Event event = eventRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Не найдено событие с id = " + id));
         if (!EventState.PUBLISHED.equals(event.getState())) {
             throw new NotFoundException("Событие должно быть опубликовано.");
         }
-        Map<Integer, Long> views = findViewsForEvents(Arrays.asList(event));
-        Map<Integer, Long> participationStats = findConfirmedRequestCount(List.of(event));
-        return EventMapper.toFullDto(event, views.get(id), participationStats.get(id));
+        Map<Integer, Long> views = findViewsForEvents(List.of(id));
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(List.of(id));
+        List<Comment> comments = commentRepository.findByEvent_Id(event.getId());
+        return EventMapper.toFullDto(event, views.get(id), participationStats.get(id),
+                CommentMapper.toCommentDtoList(comments));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<EventFullDto> searchEventsByAdmin(List<Integer> users, List<EventState> states, List<Integer> categories,
                                                   LocalDateTime rangeStart, LocalDateTime rangeEnd, PageRequest page) {
         QEvent event = QEvent.event;
@@ -115,12 +130,20 @@ public class EventServiceImpl implements EventService {
         } else {
             events = eventRepository.findAll(conditions, page).getContent();
         }
-        Map<Integer, Long> views = findViewsForEvents(events);
-        Map<Integer, Long> participationStats = findConfirmedRequestCount(events);
-        return EventMapper.toFullDtoList(events, views, participationStats);
+        List<Integer> eventIds = events.stream()
+                .map(Event::getId)
+                .collect(toList());
+        Map<Integer, Long> views = findViewsForEvents(eventIds);
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(eventIds);
+        List<Comment> comments = commentRepository.findByEvent_IdIn(eventIds);
+        Map<Integer, List<Comment>> commentsMap = comments
+                .stream()
+                .collect(groupingBy(c -> c.getEvent().getId(), toList()));
+        return EventMapper.toFullDtoList(events, views, participationStats, commentsMap);
     }
 
     @Override
+    @Transactional
     public EventFullDto updateEvent(int eventId, UpdateEventAdminRequest request) {
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new NotFoundException("Не найдено событие id = " + eventId));
@@ -174,20 +197,27 @@ public class EventServiceImpl implements EventService {
             event.setCategory(newCat);
         }
         eventRepository.save(event);
-        Map<Integer, Long> views = findViewsForEvents(Arrays.asList(event));
-        Map<Integer, Long> participationStats = findConfirmedRequestCount(List.of(event));
-        return EventMapper.toFullDto(event, views.get(eventId), participationStats.get(eventId));
+        Map<Integer, Long> views = findViewsForEvents(List.of(eventId));
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(List.of(eventId));
+        List<Comment> comments = commentRepository.findByEvent_Id(eventId);
+        return EventMapper.toFullDto(event, views.get(eventId), participationStats.get(eventId),
+                CommentMapper.toCommentDtoList(comments));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<EventShortDto> getUserEvents(int userId, PageRequest page) {
         List<Event> events = eventRepository.findByInitiator_Id(userId, page);
-        Map<Integer, Long> views = findViewsForEvents(events);
-        Map<Integer, Long> participationStats = findConfirmedRequestCount(events);
+        List<Integer> eventIds = events.stream()
+                .map(Event::getId)
+                .collect(toList());
+        Map<Integer, Long> views = findViewsForEvents(eventIds);
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(eventIds);
         return EventMapper.toShortDtoList(events, views, participationStats);
     }
 
     @Override
+    @Transactional
     public EventFullDto addUserEvent(int userId, NewEventDto eventDto) {
         checkData(eventDto.getEventDate());
         User initiator = userRepository.findById(userId).get();
@@ -196,20 +226,24 @@ public class EventServiceImpl implements EventService {
                         + " не найдена или недоступна."));
         Event event = EventMapper.toNewEntity(eventDto, initiator, category);
         event = eventRepository.save(event);
-        return EventMapper.toFullDto(event, 0L, 0L);
+        return EventMapper.toFullDto(event, 0L, 0L, Collections.emptyList());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public EventFullDto getUserEvent(int userId, int eventId) {
         Event event = eventRepository.findByIdAndInitiator_Id(eventId, userId)
                 .orElseThrow(() -> new NotFoundException("Не найдено событие id = " + eventId
                         + "пользователя id = " + userId));
-        Map<Integer, Long> views = findViewsForEvents(Arrays.asList(event));
-        Map<Integer, Long> paricipationStats = findConfirmedRequestCount(List.of(event));
-        return EventMapper.toFullDto(event, views.get(eventId), paricipationStats.get(eventId));
+        Map<Integer, Long> views = findViewsForEvents(List.of(eventId));
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(List.of(eventId));
+        List<Comment> comments = commentRepository.findByEvent_Id(eventId);
+        return EventMapper.toFullDto(event, views.get(eventId), participationStats.get(eventId),
+                CommentMapper.toCommentDtoList(comments));
     }
 
     @Override
+    @Transactional
     public EventFullDto updateUserEvent(int userId, int eventId, UpdateEventUserRequest request) {
         checkData(request.getEventDate());
 
@@ -257,24 +291,28 @@ public class EventServiceImpl implements EventService {
             event.setState(EventState.CANCELED);
         }
         eventRepository.save(event);
-        Map<Integer, Long> views = findViewsForEvents(Arrays.asList(event));
-        Map<Integer, Long> paricipationStats = findConfirmedRequestCount(List.of(event));
-        return EventMapper.toFullDto(event, views.get(eventId), paricipationStats.get(eventId));
+        Map<Integer, Long> views = findViewsForEvents(List.of(eventId));
+        Map<Integer, Long> participationStats = findConfirmedRequestCount(List.of(eventId));
+        List<Comment> comments = commentRepository.findByEvent_Id(eventId);
+        return EventMapper.toFullDto(event, views.get(eventId), participationStats.get(eventId),
+                CommentMapper.toCommentDtoList(comments));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ParticipationRequestDto> getUserEventRequests(int userId, int eventId) {
         List<ParticipationRequest> participationRequests = participationRequestRepository.findByEvent_Id(eventId);
         return ParticipationRequestMapper.toDtoList(participationRequests);
     }
 
     @Override
+    @Transactional
     public EventRequestStatusUpdateResult updateRequestsStatuses(int userId, int eventId, EventRequestStatusUpdateRequest request) {
         Event event = eventRepository.findByIdAndInitiator_Id(eventId, userId)
                 .orElseThrow(() -> new NotFoundException("Не найдено событие с id = " + eventId
                         + "пользователя id = " + userId));
         int participantLimit = event.getParticipantLimit();
-        Long confirmedRequestsCount = findConfirmedRequestCount(List.of(event)).get(eventId);
+        Long confirmedRequestsCount = findConfirmedRequestCount(List.of(eventId)).get(eventId);
         if (confirmedRequestsCount == null) {
             confirmedRequestsCount = 0L;
         }
@@ -326,9 +364,9 @@ public class EventServiceImpl implements EventService {
         return e2.getViews() > e1.getViews() ? 1 : -1;
     }
 
-    private Map<Integer, Long> findViewsForEvents(List<Event> events) {
-        List<String> urisForStatistic = events.stream()
-                .map(e -> "/events/" + e.getId())
+    private Map<Integer, Long> findViewsForEvents(List<Integer> eventIds) {
+        List<String> urisForStatistic = eventIds.stream()
+                .map(id -> "/events/" + id)
                 .collect(Collectors.toList());
         ViewStatsRequest request = new ViewStatsRequest(LocalDateTime.of(2024, 1, 1, 0, 0),
                 LocalDateTime.now(), urisForStatistic, true);
@@ -337,10 +375,7 @@ public class EventServiceImpl implements EventService {
                 .collect(Collectors.toMap(v -> Integer.valueOf(v.getUri().substring(8)), v -> v.getHits()));
     }
 
-    private Map<Integer, Long> findConfirmedRequestCount(List<Event> events) {
-        List<Integer> eventIds = events.stream()
-                .map(Event::getId)
-                .collect(Collectors.toList());
+    private Map<Integer, Long> findConfirmedRequestCount(List<Integer> eventIds) {
         List<ParticipationStat> participationStats = participationRequestRepository.findParticipationRequestStatistic(eventIds,
                 ParticipationRequestStatus.CONFIRMED);
         return participationStats.stream()
